# AI-DESK

./: .gitignore  FAST_API.py  README.md  TEST_DOCUMENTATION.md  TEST_README.md  TEST_RESULTS.md  ai_desk_agents.py  check.py  main.py  pyproject.toml  pytest.ini  quick_test.py  run_tests.py  test_agents.py  test_comprehensive.py  test_pipeline.py  theme.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/article/[slug]/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  HeroCarousel.tsx  NewsCard.tsx  NewsFeed.tsx  Sidebar.tsx
frontend/contexts/: NewsContext.tsx  ThemeContext.tsx
frontend/lib/: api.ts  search.ts  types.ts  utils.ts
