[project]
name = "ai-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "config>=0.5.1",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "function-tool>=0.0.4",
    "google-api-python-client>=2.187.0",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "speckit>=1.0.1",
    "tailwind>=3.1.5b0",
    "typescript>=0.0.12",
    "wikipedia>=1.4.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "uvicorn>=0.34.0",
]
